test/pass/variance/container_covariance.lly
class One[A](a: A) {}
class Two[A](a: A) < One(a) {}

define g[A](a: One[A])
{
}

define f[A](a: One[A], b: Two[A])
{
    g(b)
}
