test/fail/enums_and_variants/optarg_missing_scope.lly
#[
SyntaxError: Expected 'Test.<variant>', not 'One' because 'Test' is a scoped enum.
    from optarg_missing_scope.lly:11:
]#

scoped enum Test {
    One
    Two
}

define f(a: *Test = One) {}
